# Google-Scholar-Scraper

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  NOTICE  README.md  THIRD_PARTY_NOTICES.txt  prog.py  pyproject.toml
.github/workflows/: build-windows.yml  ci.yml  publish-v2.0.1.yml  verify-v2.0.1-release.yml
constraints/: release-2.0.1.txt
docs/: RELEASE_NOTES_V2.0.0.md  RELEASE_NOTES_V2.0.1.md  V2_IMPLEMENTATION_PLAN.md  V2_RELEASE_CHECKLIST.md
docs/ui-audit/: UI_UX_AUDIT.md
installer/: GoogleScholarScraper.iss
packaging/pyinstaller/: GoogleScholarScraper.spec
scripts/: build_windows.ps1  collect_third_party_licenses.py
src/google_scholar_scraper/: __init__.py  __main__.py  app.py  dedupe.py  exporters.py  models.py  ranking.py
src/google_scholar_scraper/scraper/: __init__.py  client.py  parser.py
src/google_scholar_scraper/ui/: __init__.py  tkinter_app.py
tests/: test_client.py  test_dedupe.py  test_exporters.py  test_packaging.py  test_parser.py  test_ranking.py  test_ui.py
tests/fixtures/: scholar_blocked.html  scholar_incompatible.html  scholar_rate_limited.html  scholar_results_basic.html  scholar_results_duplicates.html  scholar_results_empty.html  scholar_results_missing_optional.html
third_party_licenses/: README.md
