[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "google-scholar-scraper"
version = "0.2.0"
description = "A lightweight desktop Google Scholar scraping tool."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "pandas",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
