[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "google-scholar-scraper"
version = "2.0.0"
description = "A lightweight desktop Google Scholar scraping tool."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "beautifulsoup4",
    "openpyxl",
    "requests",
]

[project.optional-dependencies]
build = [
    "pyinstaller",
]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
