[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "google-scholar-scraper"
version = "2.0.1"
description = "A lightweight desktop app for reviewing and exporting Google Scholar search results."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mahdi Navaei", email = "M.Navaei1367@gmail.com" },
]
keywords = ["google-scholar", "desktop-app", "web-extraction", "research-tool", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "beautifulsoup4>=4.14,<5",
    "openpyxl>=3.1,<4",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.20,<7",
]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/MahdiNavaei/Google-Scholar-Scraper"
Repository = "https://github.com/MahdiNavaei/Google-Scholar-Scraper"
Issues = "https://github.com/MahdiNavaei/Google-Scholar-Scraper/issues"
Changelog = "https://github.com/MahdiNavaei/Google-Scholar-Scraper/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
